add style to registration/login.html

--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -11,7 +11,7 @@
       <div class="col-md-4">
 
         <div class="logoname" style="display:inline">
-           <img src="/static/images/log.jpeg" style="width:400px;height:500px;">
+           <img src="/static/images/log.png" style="width:400px;height:500px;">
          </div>
 
       </div>
