--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -2,11 +2,7 @@
 {% load static %}
 <style>
 #navbarr{
-  background:  #010101;
-  /* background: #0099F7; */
-  /* background:#282D31; */
-/* background: -webkit-linear-gradient(to right, #F11712, #0099F7);
-background: linear-gradient(to right, #F11712, #0099F7); */
+background:  #010101;
 margin-bottom:100px;
 height:90px;
 }
@@ -19,10 +15,8 @@ height:90px;
     color;#2984D0;
   }
 #navbarrr{
-  /* #00A3B4 */
-  /* background: #0099F7; */
-  /* background:#282D31; */
-  background:  #010101;
+
+background:  #010101;
 margin-bottom:80px;
 height:90px;
 }
@@ -41,7 +35,7 @@ body{
   margin-left:4px;
 }
 .ionic:hover {
-  /* font-size: 46px; */
+
   color:white;
 }
   .navbar {
@@ -103,10 +97,10 @@ body{
 
 <nav class="navbar fixed-top" id="navbarr">
 <div class="container">
-    <section class="logo-section"><a href="{% url "index" %}"><img class="logo" src="/static/images/logo.png"  style="width:360px;height:60px;"alt="/></a>
+    <section class="logo-section"><a href="{% url "index" %}" data-toggle="tooltip" data-placement="top" title="Home" ><img class="logo" src="/static/images/logo.png"  style="width:360px;height:60px;"alt="/></a>
       <div></div><a href="{% url "index" %}"><img class="logoname"/></a>
     </section>
-    <form class="navbar-form" role="search" action="{% url 'search' %}" style="width:auto">
+    <form class="navbar-form" role="search" action="{% url 'search' %}" style="width:auto" data-toggle="tooltip" data-placement="top" title="search by business" >
        <div class="input-group">
          <input type="text" class="form-control" placeholder="Search businesses" name="name" style="height:38px;">
          <div class="input-group-btn">
@@ -115,8 +109,8 @@ body{
      </form>
     <section class="icons-section" >
 <!-- <a href="{% url "add_neighborhood"%}"><ion-icon name="cloud-upload" class="ionic"></ion-icon></a> -->
-       <a href="{% url 'profile' username=user %}"><ion-icon name="contact" class="ionic"></ion-icon></a>
-      <a href="/logout"><ion-icon name="log-out" class="ionic"></ion-icon></a>
+       <a href="{% url 'profile' username=user %}"><ion-icon name="contact" class="ionic"data-toggle="tooltip" data-placement="top" title="view profile" ></ion-icon></a>
+      <a href="/logout"><ion-icon name="log-out" class="ionic" data-toggle="tooltip" data-placement="top" title="logout" ></ion-icon></a>
 </section>
     </div>
   </nav>
